--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon app.js --exec babel-node --presets es2015,stage-2",
     "test2": "mocha --compilers js:babel-core/register --require babel-polyfill --timeout 15000 --recursive",
     "tesxt": "mocha --require babel-register",
-    "test": "mocha test --reporter mocha-junit-reporter --reporter-options mochaFile=./API/*.xml"
+    "test": "mocha test --reporter mocha-junit-reporter --reporter-options mochaFile=./API/test-result.xml"
   },
   "author": "",
   "license": "ISC",
